--- a/styles.css
+++ b/styles.css
@@ -255,11 +255,11 @@ img {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 95vh;
 }
 
 .getStarted__text {
-  padding-top: 10rem;
+  padding-top: 15rem;
   width: 52rem;
 }
 
@@ -289,16 +289,16 @@ img {
   margin-top: 3rem;
 }
 
-.title {
+.property__title {
   text-align: center;
 }
 
-.title h2 {
+.property__title h2 {
   font-weight: bold;
 }
 
-.title p,
-.title h2 {
+.property__title p,
+.property__title h2 {
   color: var(--clr-light);
 }
 
