--- a/styles.css
+++ b/styles.css
@@ -703,51 +703,64 @@ img {
   margin-top: 5rem;
 }
 
-/* c2 about */
+/* about section 2 */
 
-.about__properties {
-  padding: 8rem 25rem;
-  width: 90%;
-  background-color: var(--clr-light);
-  margin: auto;
+.about__wrapper{
+  padding: 0 12rem;
 }
-.about__title h3 {
+
+.about__offers {
+  padding: 9rem;
+  margin: -2rem 0;
+
+}
+
+.about__title h2{
   font-weight: bold;
   text-align: center;
-  padding-bottom: 4rem;
 }
-
 .about__title p {
+  margin-top: 2rem;
+}
+.about__title{
+
   text-align: justify;
 }
 
-.about__section {
+/* c about cards */
+
+.about__cards--wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 5rem;
-  box-shadow: rgba(0, 0.2, 0.2, 0.24) 0px 3px 8px;
-}
-.about__img {
-  height: 400px; /* adjust this */
-}
-.about__img img {
-  width: 100%;
-  height: 105.5%;
-  object-fit: conta;
-}
-
-.about__infos {
-  background-color: var(--clr-gray);
-  padding: 4rem;
-}
-
-.ab__titles h4 {
+  grid-template-columns: auto 1fr;
   margin-top: 4rem;
+  width: 100%;
+  padding: 0 12re;
+  background-color: var(--clr-gray);
+
+}
+
+.about__cards--img {
+  background-color: var(--clr-gray);
+}
+
+.about__cards--img img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.about__cards--texts{
+  text-align: justify;
+  padding: 3rem;
+  margin-top: 2rem;
+ 
+}
+
+.about__cards--texts h4 {
   font-weight: bold;
 }
-.ab__description {
-  text-align: justify;
-  margin-top: 4rem;
+.about__cards--texts p {
+  margin-top: 3rem;
 }
 
 /* m about */
